nav bar fixed on small 375px

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Amita:wght@400;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Amita:wght@400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 html {
   scroll-behavior: smooth;
@@ -66,7 +66,7 @@ li {
 }
 
 .link__hover-effect:after {
-  content: '';
+  content: "";
   position: absolute;
   bottom: -3px;
   height: 3px;
@@ -82,6 +82,19 @@ li {
 
 .donate {
   padding: 16px 33px;
+  color: #0d1832;
+  border: 2px solid #3a9b43;
+  border-radius: 100px;
+  text-decoration: none;
+  text-align: center;
+  color: #3a9b43;
+  font-weight: 500;
+}
+
+.donate:before {
+  content: "Donate";
+  padding: 9px 11px;
+  visibility: hidden;
   color: #0d1832;
   border: 2px solid #3a9b43;
   border-radius: 100px;
@@ -128,7 +141,7 @@ li {
   top: 0;
   left: 0;
   bottom: 0;
-  font-family: 'Amita', Sans-serif;
+  font-family: "Amita", Sans-serif;
   color: white;
   padding: 0 8px 300px 8px;
   font-size: 50px;
@@ -147,7 +160,7 @@ li {
   color: white;
   line-height: 2.1rem;
   font-size: 22px;
-  font-family: 'Amita', Sans-serif;
+  font-family: "Amita", Sans-serif;
 }
 
 /* TIMETABLE SECTION */
@@ -192,7 +205,7 @@ li {
   margin-top: 1.5rem;
   margin-bottom: 3rem;
   font-weight: 700;
-  font-family: 'Amita', Sans-serif;
+  font-family: "Amita", Sans-serif;
 }
 
 /* My section start here */
@@ -307,7 +320,7 @@ span {
   font-size: 44px;
   font-weight: 500;
   margin: 16px;
-  font-family: 'Amita', Sans-serif;
+  font-family: "Amita", Sans-serif;
 }
 
 .about__para {
@@ -342,7 +355,7 @@ span {
   font-size: 44px;
   font-weight: 700;
   margin: 16px;
-  font-family: 'Amita', Sans-serif;
+  font-family: "Amita", Sans-serif;
   text-align: center;
 }
 
@@ -354,7 +367,7 @@ span {
 }
 
 .pillar__title {
-  font-family: 'Amita', Sans-serif;
+  font-family: "Amita", Sans-serif;
   font-size: 24px;
   font-weight: 600;
   color: #32953c;
@@ -612,5 +625,14 @@ i {
   }
   .donate {
     padding: 9px 11px;
+  }
+}
+
+@media (max-width: 375px) {
+  .donate {
+    visibility: hidden;
+  }
+  .donate:before {
+    visibility: visible;
   }
 }
